--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -4438,5 +4438,86 @@
     "CL_DV_OV_night_mode_setting_desc": "Vähennä näytön kirkkautta ja/tai valoa aikataulutettuina yöaikoina.",
     "CL_DV_OV_door_lock_setting_desc": "Oven lukon kytkeminen päälle lukitsee uunin luukun.",
     "CL_CF_FM_one_day_left": "1 päivä jäljellä",
-    "CL_CF_FM_x_item_selected": "*** kohde valittu"
+    "CL_CF_FM_x_item_selected": "*** kohde valittu",
+    "CL_SL_CM_progam_send_warning": "Valitettavasti ohjelma ei voi lähettää, kytke laitteesi päälle ja avaa kaukosäädin ja yritä uudelleen.",
+    "CL_SL_CM_progam_start_warning": "Valitettavasti ohjelma ei voi käynnistyä. Kytke laitteesi päälle ja avaa kaukosäädin ja yritä uudelleen.",
+    "CL_SL_CM_progam_sent_successfully": "Ohjelma lähetetty onnistuneesti!",
+    "CL_SL_CM_select_device_desc": "Valitse käytettävä laite.",
+    "CL_DV_WM_Detergent_In_Use_key": "Pesuaine käytössä",
+    "CL_DV_RF_cleaning_mode": "Puhdistustila",
+    "CL_DV_RF_holiday_mode": "Lomatila",
+    "CL_DV_RF_party_mode": "Juhlatila",
+    "w_i_connect_scenario": "Mikä on ConnectLife-skenaario",
+    "w_i_smart_energy": "Mitä on älykäs energia",
+    "smart_energy_l_m": "Lue lisää Smart Energyn tärkeimmistä ominaisuuksista",
+    "w_i_air_care": "Mikä on Air Care",
+    "air_care_l_m": "Lue lisää Air Caren tärkeimmistä ominaisuuksista",
+    "w_i_smart_laundry": "Mikä on Smart Laundry",
+    "smart_laundry_l_m": "Lue lisää Smart Laundryn tärkeimmistä ominaisuuksista",
+    "w_i_smart_kitchen": "Mikä on Smart Kitchen",
+    "smart_kitchen_l_m": "Lue lisää Smart Kitchenin tärkeimmistä ominaisuuksista",
+    "w_i_smart_support": "Mikä on älykäs tuki",
+    "smart_support_l_m": "Lue lisää Smart Supportin tärkeimmistä ominaisuuksista",
+    "smart_energy_helps": "Smart Energy auttaa sinua valvomaan ja pitämään laitteita energiatehokkaassa tilassa",
+    "smart_energy_helps_1": "1. Yhden napsautuksen Eco",
+    "smart_energy_helps_1_content": "Laitteidesi aktiivinen ECO-tila. Analysoi tilastollisesti laitteen energiankulutus. Seuraa energiansäästötietoja ja aseta energiankäyttötavoite.",
+    "smart_energy_helps_2": "2. Energiankulutuksen seuranta",
+    "smart_energy_helps_2_content": "Laske koko talon sähkön- ja vedenkulutus päivittäin, kuukausittain ja vuosittain. Näet myös yksittäisten laitteiden kulutustilastot, kunkin laitteen energiankulutuksen osuuden valitulla ajanjaksolla, kokonais- ja yksittäisen energiankulutuksen.",
+    "smart_energy_helps_3": "3. Energy Assistant",
+    "smart_energy_helps_3_content": "Aseta energiansäästötavoitteet ja lähetä ilmoituksia käyttäjille, kun asetetut tavoitearvot saavutetaan.",
+    "air_care_helps": "Ilmanhoito pyrkii ratkaisemaan koko talon älykkään lämpötilan, kosteuden ja ilman hallinnan",
+    "air_care_helps_1": "1. Ilman arviointi",
+    "air_care_helps_1_content": "Seuraa jokaisen huoneen lämpötilaa ja kosteutta reaaliajassa ja anna mukavuusarvioita ja muistutuksia ilmaston perusteella",
+    "air_care_helps_2": "2. Yhden napsautuksen optimointi",
+    "air_care_helps_2_content": "Optimointi voidaan aloittaa yhdellä napsautuksella. Tarjoamme viisi erilaista optimointimallia. Jokainen optimointitila voidaan säätää käyttäjien tarpeiden mukaan, mikä tarjoaa käyttäjille räätälöityjä optimointiratkaisuja.",
+    "air_care_helps_3": "3.3D huonenäkymä",
+    "air_care_helps_3_content": "Pidä silmällä huoneesi tilaa ja laitteita kotisi yksityiskohtaisen 3D-visualisoinnin avulla.",
+    "smart_laundry_key": "Älykäs pesula",
+    "smart_laundry_helps": "Smart Laundry tarjoaa asiantuntevia pesuvinkkejä, intuitiivisen pesula-avustajan ja saumattoman pesuainehallinnan, mikä takaa vertaansa vailla olevan pyykinpesukokemuksen",
+    "smart_laundry_helps_1": "1. Räätälöity pesula",
+    "smart_laundry_helps_1_content": "Henkilökohtaiset syklit perustuvat käyttäjäprofiileihin ja mieltymyksiin, tunnisteilla eri vuodenaikoina, ulkoilua, vauvanhoitoa ja muuta.",
+    "smart_laundry_helps_2": "2. Pesuaineen hallinta",
+    "smart_laundry_helps_2_content": "Optimoi pyykkirutiini Smart Home Laundry Assistantin avulla, tunnista pesuainemerkit automaattisesti ja hallitse pesukoneen annostusta.",
+    "smart_laundry_helps_3": "3.Pyykin käyttöraportti",
+    "smart_laundry_helps_3_content": "Näyttää viikoittaiset, kuukausittaiset ja vuosittaiset raportit käyttäjän pyykinpesuohjelman käytöstä sekä kuukauden veden ja sähkön kulutuksen ja rummun puhdistuksen.",
+    "smart_kitchen_key": "Älykäs keittiö",
+    "smart_kitchen_helps": "Smart Kitchen tarjoaa sinulle ennennäkemättömän älykkään ruoanlaittokokemuksen, mukaan lukien älykkäät reseptit, viiniparit, reseptiavustajat sekä ainesosien, viinien ja juomien hallinnan",
+    "smart_kitchen_helps_1": "1.Kokin resepti",
+    "smart_kitchen_helps_1_content": "Koe mestarin reseptit ainutlaatuisissa makuissa eri uuneissa kypsennettynä, jotka noudattavat reseptin valmistusohjeita yhdellä napsautuksella.",
+    "smart_kitchen_helps_2": "2. Reseptiavustaja",
+    "smart_kitchen_helps_2_content": "Mukauta ja luo reseptejä henkilökohtaisten mieltymystesi mukaan, mukaan lukien ravitsemus, keittiöt, elämäntavat ja allergiat.",
+    "smart_kitchen_helps_3": "3. Food Management",
+    "smart_kitchen_helps_3_content": "Lisää ja tarkastele usein käytettyjen ainesosien tietoja, kuten viimeistä käyttöpäivää. Yhdistä nopeasti sopivat ruokareseptit ja lähetä puuttuvat ainesosat ostoslistalle.",
+    "smart_kitchen_helps_4": "Juomanhallinta",
+    "smart_kitchen_helps_4_content": "Lisää juomia ja luo juomalista, katso yksityiskohtaiset tiedot jokaisesta tallennetusta juomasta.",
+    "smart_kitchen_helps_5": "Viini varasto",
+    "smart_kitchen_helps_5_content": "Skannaa luodaksesi VIvinon viinikellarilista, aseta muistutuksia optimaalisesta juomaajasta ja suosittele ruokapareja viinityypin perusteella.",
+    "smart_kitchen_helps_6": "6. Ostoslista",
+    "smart_kitchen_helps_6_content": "Luo ostoslista reseptin perusteella, merkitse ostosreferenssiksi jo omistamasi ja hankkimasi tuotteet.",
+    "smart_support_key": "Älykäs tuki",
+    "smart_support_helps": "Smart Support tarjoaa kattavaa apua laitteillesi. Saat puhdistus- ja hoitovinkkejä päivittäiseen huoltoon, yhden napsautuksen itsediagnostiikan tarkistaaksesi kaikkien laitteidesi tilan ja tarjota mahdollisia ratkaisuja kaikkiin epänormaaleihin toimintoihin",
+    "smart_support_helps_1": "1. Puhdistus- ja huoltovinkkejä",
+    "smart_support_helps_1_content": "Anna ehdotuksia tuotteen päivittäiseen puhdistukseen ja huoltoon.",
+    "smart_support_helps_2": "2. Yhden napsautuksen itsediagnoosi",
+    "smart_support_helps_2_content": "Yhden napsautuksen itsetarkastus ymmärtää kaikkien kodinkoneiden tilan. Kun ongelma havaitaan, tarjoa suositeltuja ratkaisuja.",
+    "smart_support_helps_3": "Vianetsintä",
+    "smart_support_helps_3_content": "Kun laitteessa on ongelma, käyttäjät voivat itse auttaa, tehdä vianmäärityksen ja ratkaista ongelman vikaoppaan mukaisesti.",
+    "smart_support_helps_4": "4. Ilmoita ongelmasta",
+    "smart_support_helps_4_content": "Jos APP:n tai tuotteen käytössä ilmenee ongelmia, käyttäjät voivat antaa palautetta verkossa lyhentääkseen yhteydenpitoaikaa puhelinkeskuksen kanssa.",
+    "smart_support_helps_5": "5. Ota yhteyttä",
+    "smart_support_helps_5_content": "Käyttäjät voivat ottaa meihin yhteyttä puhelimitse, sähköpostitse ja virallisella verkkosivustolla.",
+    "block_key": "Lohko",
+    "guide_tips_device_1": "Tämä on <b> uusi kotisivu -välilehti. </b>",
+    "guide_tips_device_2": "Voit muokata tilausta, näyttää tai piilottaa napsauttamalla \" : \".",
+    "guide_tips_device_3": "Voit poistaa tai muokata korttia painamalla sitä pitkään.",
+    "guide_tips_device_4": "Voit kokea <b> mukautettuja skenaariokortteja. </b>",
+    "guide_tips_device_5": "Löydät Koti-välilehden asetuksen valikkosivun kohdasta <b> muokkaa ulkoasua </b>",
+    "guide_tips_1": "ConnectLife on käynnistänyt <b> viisi skenaariota. </b>",
+    "guide_tips_2": "Voit muokata osioiden järjestystä napsauttamalla \":\".",
+    "guide_tips_3": "Voit muuttaa etusivun osioiden järjestystä vetämällä \"=\"-merkkiä.",
+    "c_your_device": "Yhdistä\nlaitteet",
+    "a_ex_new_way": "ja koe uusi älykäs elämäntapa.",
+    "my_place": "Minun paikkani",
+    "home_tab": "Kotisivu-välilehti",
+    "home_tab_content": "Näytä tai piilota skenaariot-välilehti kotisivun yläosassa"
 }
