--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4438,5 +4438,86 @@
     "CL_DV_OV_night_mode_setting_desc": "הפחת את בהירות המסך ו/או התאורה בשעות הלילה המתוכנתות.",
     "CL_DV_OV_door_lock_setting_desc": "הפעלת נעילת הדלת תנעל את דלת התנור שלך.",
     "CL_CF_FM_one_day_left": "נותר יום 1",
-    "CL_CF_FM_x_item_selected": "*** פריט נבחר"
+    "CL_CF_FM_x_item_selected": "*** פריט נבחר",
+    "CL_SL_CM_progam_send_warning": "מצטערים, התוכנית לא יכולה לשלוח, אנא הפעל את המכשיר ופתח את השלט ונסה שוב.",
+    "CL_SL_CM_progam_start_warning": "מצטערים, התוכנית לא יכולה להפעיל, אנא הפעל את המכשיר ופתח את השלט ונסה שוב.",
+    "CL_SL_CM_progam_sent_successfully": "התוכנית נשלחה בהצלחה!",
+    "CL_SL_CM_select_device_desc": "אנא בחר את המכשיר לשימוש.",
+    "CL_DV_WM_Detergent_In_Use_key": "חומר ניקוי בשימוש",
+    "CL_DV_RF_cleaning_mode": "מצב ניקוי",
+    "CL_DV_RF_holiday_mode": "מצב חג",
+    "CL_DV_RF_party_mode": "מצב מסיבה",
+    "w_i_connect_scenario": "מהו תרחיש ConnectLife",
+    "w_i_smart_energy": "מהי אנרגיה חכמה",
+    "smart_energy_l_m": "למידע נוסף על תכונות מפתח של אנרגיה חכמה",
+    "w_i_air_care": "מה זה Air Care",
+    "air_care_l_m": "למידע נוסף על תכונות מפתח של Air Care",
+    "w_i_smart_laundry": "מהי כביסה חכמה",
+    "smart_laundry_l_m": "למידע נוסף על תכונות מפתח של Smart Laundry",
+    "w_i_smart_kitchen": "מה זה מטבח חכם",
+    "smart_kitchen_l_m": "למידע נוסף על תכונות מפתח של מטבח חכם",
+    "w_i_smart_support": "מהי תמיכה חכמה",
+    "smart_support_l_m": "למידע נוסף על תכונות מפתח של תמיכה חכמה",
+    "smart_energy_helps": "Smart Energy עוזרת לך לנטר ולשמור על מכשירים במצב חסכוני באנרגיה",
+    "smart_energy_helps_1": "1. Eco בלחיצה אחת",
+    "smart_energy_helps_1_content": "מצב ECO אקטיבי של המכשירים שלך. ניתוח סטטיסטי של צריכת האנרגיה של המכשיר. מעקב אחר נתוני חיסכון באנרגיה והגדר יעד שימוש באנרגיה.",
+    "smart_energy_helps_2": "2. ניטור צריכת אנרגיה",
+    "smart_energy_helps_2_content": "חשב את כל צריכת החשמל והמים של הבית על בסיס יומי, חודשי ושנתי. אתה יכול גם להציג את סטטיסטיקת הצריכה של מכשירים בודדים, שיעור צריכת האנרגיה של כל מכשיר בתקופה שנבחרה, צריכת האנרגיה הכוללת והפרטית.",
+    "smart_energy_helps_3": "3. עוזר אנרגיה",
+    "smart_energy_helps_3_content": "הגדר יעדים לחיסכון באנרגיה, ושלח הודעות למשתמשים כאשר ערכי היעד שנקבעו מושגים.",
+    "air_care_helps": "Air Care שואף לפתור את השליטה החכמה של הטמפרטורה, הלחות והאוויר בכל הבית",
+    "air_care_helps_1": "1. הערכת אוויר",
+    "air_care_helps_1_content": "עקוב אחר מצב הטמפרטורה והלחות של כל חדר בזמן אמת, וספק הערכות נוחות ותזכורות המבוססות על מזג האוויר",
+    "air_care_helps_2": "2. אופטימיזציה בלחיצה אחת",
+    "air_care_helps_2_content": "ניתן להתחיל אופטימיזציה בלחיצה אחת. אנו מספקים חמש תוכניות אופטימיזציה שונות. כל מצב אופטימיזציה יכול להיות מותאם בהתאם לצרכי המשתמש, ומספק למשתמשים פתרונות אופטימיזציה מותאמים אישית.",
+    "air_care_helps_3": "נוף לחדר 3.3D",
+    "air_care_helps_3_content": "פקח עין על מצב החדר והמכשירים שלך באמצעות הדמיה תלת מימדית מפורטת של הבית שלך.",
+    "smart_laundry_key": "כביסה חכמה",
+    "smart_laundry_helps": "Smart Laundry מציעה עצות כביסה מומחים, עוזר כביסה אינטואיטיבי וניהול חומרי ניקוי חלק, המבטיחים חווית כביסה שאין שני לה",
+    "smart_laundry_helps_1": "1. כביסה מותאמת אישית",
+    "smart_laundry_helps_1_content": "מחזורים מותאמים אישית המבוססים על פרופילים והעדפות משתמשים, עם תגיות לעונות שונות, פעילויות חוצות, טיפול בתינוק ועוד.",
+    "smart_laundry_helps_2": "2. ניהול חומרי ניקוי",
+    "smart_laundry_helps_2_content": "ייעל את שגרת הכביסה שלך עם עוזר כביסה חכם לבית, זיהוי אוטומטי של מותגי חומרי ניקוי ונהל את המינון במכונת הכביסה שלך.",
+    "smart_laundry_helps_3": "3.דוח שימוש בכביסה",
+    "smart_laundry_helps_3_content": "מציג דוחות שבועיים, חודשיים ושנתיים על השימוש של המשתמש בתוכנית הכביסה, כמו גם צריכת המים והחשמל של חודש וניקוי התופים.",
+    "smart_kitchen_key": "מטבח חכם",
+    "smart_kitchen_helps": "Smart Kitchen מספקת לך חווית בישול אינטליגנטית חסרת תקדים, כולל מתכונים אינטליגנטיים, התאמות יין, עוזרי מתכונים וניהול מרכיבים, יין ומשקאות",
+    "smart_kitchen_helps_1": "1.מתכון שף",
+    "smart_kitchen_helps_1_content": "התנסו במתכוני מאסטר בטעמים ייחודיים בבישול בתנורים שונים, העוקבים אחר הוראות הבישול של המתכון בלחיצה אחת בלבד.",
+    "smart_kitchen_helps_2": "2. עוזר מתכונים",
+    "smart_kitchen_helps_2_content": "התאם אישית והפק מתכונים המבוססים על ההעדפות האישיות שלך כולל תזונה, מטבחים, אורח חיים ואלרגיות.",
+    "smart_kitchen_helps_3": "3. ניהול מזון",
+    "smart_kitchen_helps_3_content": "הוסף והצג פרטי מרכיבים בשימוש תכוף כגון תאריך תפוגה. התאם במהירות מתכוני מזון מתאימים ושלח מרכיבים חסרים לרשימת הקניות.",
+    "smart_kitchen_helps_4": "ניהול משקאות",
+    "smart_kitchen_helps_4_content": "הוסף משקאות וצור רשימת שתייה, הצג מידע מפורט על כל שתייה מאוחסנת.",
+    "smart_kitchen_helps_5": "מלאי יין",
+    "smart_kitchen_helps_5_content": "סרוק ליצירת רשימת מרתף יינות מאת VIvino, הגדר תזכורות לתקופת שתייה אופטימלית והמליץ ​​על התאמה למזון לפי סוג היין.",
+    "smart_kitchen_helps_6": "6. רשימת קניות",
+    "smart_kitchen_helps_6_content": "הפק את רשימת הקניות על סמך המתכון, סמן את הפריטים שכבר בבעלותך ורכשת כאסמכתא לקניות שלך.",
+    "smart_support_key": "תמיכה חכמה",
+    "smart_support_helps": "תמיכה חכמה מספקת סיוע מקיף למכשירים שלך. אתה יכול לקבל עצות ניקוי וטיפול לתחזוקה יומיומית, אבחון עצמי בלחיצה אחת כדי לבדוק את מצב כל המכשירים שלך ולספק פתרונות אפשריים לכל פעולה חריגה",
+    "smart_support_helps_1": "1. עצות ניקוי ותחזוקה",
+    "smart_support_helps_1_content": "תנו הצעות לניקוי ותחזוקה יומיומית של המוצר.",
+    "smart_support_helps_2": "2. דיגנוזה עצמית בלחיצה אחת",
+    "smart_support_helps_2_content": "בדיקה עצמית בלחיצה אחת כדי להבין את המצב של כל מכשירי החשמל הביתיים. כאשר מתגלה בעיה, ספק פתרונות מומלצים.",
+    "smart_support_helps_3": "פתרון תקלות",
+    "smart_support_helps_3_content": "כאשר יש בעיה במכשיר, המשתמשים יכולים לעזור בעצמם, לפתור תקלות ולפתור את הבעיה לפי מדריך התקלות.",
+    "smart_support_helps_4": "4. דווח על בעיה",
+    "smart_support_helps_4_content": "אם יש בעיות עם האפליקציה או השימוש במוצר, משתמשים יכולים לקבל משוב מקוון כדי להפחית את זמן התקשורת עם המוקד.",
+    "smart_support_helps_5": "5. צור קשר",
+    "smart_support_helps_5_content": "משתמשים יכולים ליצור איתנו קשר בטלפון, בדוא\"ל ובאתר הרשמי.",
+    "block_key": "לַחסוֹם",
+    "guide_tips_device_1": "זוהי הכרטיסייה <b> דף הבית החדש. </b>",
+    "guide_tips_device_2": "אתה יכול ללחוץ על \" : \" כדי לערוך את הסדר, להציג או להסתיר.",
+    "guide_tips_device_3": "אתה יכול ללחוץ לחיצה ארוכה על הכרטיס כדי למחוק או לערוך אותו.",
+    "guide_tips_device_4": "אתה יכול לחוות <b> כרטיסי תרחישים מותאמים אישית. </b>",
+    "guide_tips_device_5": "אתה יכול למצוא את הגדרת כרטיסיית הבית ב- <b> התאם אישית את המראה </b> בדף התפריט",
+    "guide_tips_1": "ConnectLife השיקה <b> חמישה תרחישים. </b>",
+    "guide_tips_2": "אתה יכול ללחוץ על \":\" כדי לערוך את סדר הסעיפים",
+    "guide_tips_3": "אתה יכול לגרור את ה\"=\" כדי לשנות את סדר הקטעים בדף הבית.",
+    "c_your_device": "חבר\n את המכשירים שלך",
+    "a_ex_new_way": "ולחוות דרך חדשה של חיים חכמים.",
+    "my_place": "המקום שלי",
+    "home_tab": "כרטיסיית דף הבית",
+    "home_tab_content": "הצג או הסתר את כרטיסיית התרחישים בחלק העליון של דף הבית"
 }
