--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -4438,5 +4438,86 @@
     "CL_DV_OV_night_mode_setting_desc": "Smanjite svjetlinu zaslona i/ili svjetlost tijekom zakazanih noćnih sati.",
     "CL_DV_OV_door_lock_setting_desc": "Uključivanje zaključavanja vrata zaključat će vrata vaše pećnice.",
     "CL_CF_FM_one_day_left": "još 1 dan",
-    "CL_CF_FM_x_item_selected": "*** odabrana stavka"
+    "CL_CF_FM_x_item_selected": "*** odabrana stavka",
+    "CL_SL_CM_progam_send_warning": "Nažalost, program ne može poslati, uključite uređaj i otvorite daljinski upravljač te pokušajte ponovno.",
+    "CL_SL_CM_progam_start_warning": "Nažalost, program se ne može pokrenuti, uključite uređaj i otvorite daljinski upravljač te pokušajte ponovno.",
+    "CL_SL_CM_progam_sent_successfully": "Program je uspješno poslan!",
+    "CL_SL_CM_select_device_desc": "Odaberite uređaj koji ćete koristiti.",
+    "CL_DV_WM_Detergent_In_Use_key": "Deterdžent u upotrebi",
+    "CL_DV_RF_cleaning_mode": "Način čišćenja",
+    "CL_DV_RF_holiday_mode": "Način odmora",
+    "CL_DV_RF_party_mode": "Party mod",
+    "w_i_connect_scenario": "Što je ConnectLife scenarij",
+    "w_i_smart_energy": "Što je pametna energija",
+    "smart_energy_l_m": "Saznajte više o ključnim značajkama Smart Energy",
+    "w_i_air_care": "Što je Air Care",
+    "air_care_l_m": "Saznajte više o ključnim značajkama Air Care",
+    "w_i_smart_laundry": "Što je Smart Laundry",
+    "smart_laundry_l_m": "Saznajte više o ključnim značajkama Smart Laundry",
+    "w_i_smart_kitchen": "Što je Smart Kitchen",
+    "smart_kitchen_l_m": "Saznajte više o ključnim značajkama Smart Kitchen",
+    "w_i_smart_support": "Što je Smart Support",
+    "smart_support_l_m": "Saznajte više o ključnim značajkama Smart Support",
+    "smart_energy_helps": "Smart Energy pomaže vam u nadzoru i održavanju uređaja u energetski učinkovitom stanju",
+    "smart_energy_helps_1": "1.One-Click Eco",
+    "smart_energy_helps_1_content": "Aktivni ECO način rada vaših uređaja. Statistički analizirati potrošnju energije uređaja. Pratite podatke o uštedi energije i postavite ciljanu potrošnju energije.",
+    "smart_energy_helps_2": "2. Praćenje potrošnje energije",
+    "smart_energy_helps_2_content": "Izračunajte potrošnju struje i vode u cijeloj kući na dnevnoj, mjesečnoj i godišnjoj bazi. također možete vidjeti statistiku potrošnje pojedinih uređaja, udio potrošnje energije svakog uređaja unutar odabranog razdoblja, ukupnu i pojedinačnu potrošnju energije.",
+    "smart_energy_helps_3": "3.Asistent za energetiku",
+    "smart_energy_helps_3_content": "Postavite ciljeve uštede energije i pošaljite obavijesti korisnicima kada se postignu zadane ciljne vrijednosti.",
+    "air_care_helps": "Air care ima za cilj riješiti inteligentnu kontrolu temperature, vlage i zraka u cijeloj kući",
+    "air_care_helps_1": "1. Ocjena zraka",
+    "air_care_helps_1_content": "Pratite status temperature i vlažnosti svake sobe u stvarnom vremenu i pružite procjene udobnosti i podsjetnike na temelju klimatizacije",
+    "air_care_helps_2": "2.One-click optimizacija",
+    "air_care_helps_2_content": "Optimizacija se može pokrenuti jednim klikom. Nudimo pet različitih shema optimizacije. Svaki način optimizacije može se prilagoditi prema potrebama korisnika, pružajući korisnicima prilagođena rješenja optimizacije.",
+    "air_care_helps_3": "3.3D pogled na sobu",
+    "air_care_helps_3_content": "Pratite stanje svoje sobe i kućanskih aparata kroz detaljnu 3D vizualizaciju vašeg doma.",
+    "smart_laundry_key": "Pametna praonica rublja",
+    "smart_laundry_helps": "Smart Laundry nudi stručne savjete za pranje, intuitivnog pomoćnika za pranje rublja i besprijekorno upravljanje deterdžentom, osiguravajući neusporedivo iskustvo pranja rublja",
+    "smart_laundry_helps_1": "1. Praonica rublja po narudžbi",
+    "smart_laundry_helps_1_content": "Personalizirani ciklusi temeljeni na korisničkim profilima i preferencijama, s oznakama za različita godišnja doba, aktivnosti na otvorenom, njegu bebe i više.",
+    "smart_laundry_helps_2": "2. Upravljanje deterdžentima",
+    "smart_laundry_helps_2_content": "Optimizirajte svoju rutinu pranja rublja uz Smart Home Laundry Assistant, automatski prepoznajte marke deterdženta i upravljajte dozom u vašoj perilici rublja.",
+    "smart_laundry_helps_3": "3. Izvješće o korištenju rublja",
+    "smart_laundry_helps_3_content": "Prikazuje tjedna, mjesečna i godišnja izvješća o korisnikovom korištenju programa za pranje rublja, kao i mjesečnu potrošnju vode i struje te čišćenje bubnja.",
+    "smart_kitchen_key": "Pametna kuhinja",
+    "smart_kitchen_helps": "Smart Kitchen pruža vam neviđeno inteligentno iskustvo kuhanja, uključujući inteligentne recepte, sparivanja vina, pomoćnike za recepte i upravljanje sastojcima, vinom i pićem",
+    "smart_kitchen_helps_1": "1.Chef recept",
+    "smart_kitchen_helps_1_content": "Doživite majstorske recepte u jedinstvenim okusima kada se kuhaju u različitim pećnicama, koje slijede upute za kuhanje recepta samo jednim klikom.",
+    "smart_kitchen_helps_2": "2.Pomoćnik za recepte",
+    "smart_kitchen_helps_2_content": "Prilagodite i generirajte recepte na temelju svojih osobnih preferencija, uključujući prehranu, kuhinje, stil života i alergije.",
+    "smart_kitchen_helps_3": "3. Upravljanje hranom",
+    "smart_kitchen_helps_3_content": "Dodajte i pregledajte pojedinosti o često korištenim sastojcima kao što je datum isteka. Brzo spojite odgovarajuće recepte za hranu i pošaljite sastojke koji nedostaju na popis za kupovinu.",
+    "smart_kitchen_helps_4": "Upravljanje ",
+    "smart_kitchen_helps_4_content": "Dodajte pića i izradite popis pića, pogledajte detaljne informacije o svakom pohranjenom piću.",
+    "smart_kitchen_helps_5": "Vino zalihe",
+    "smart_kitchen_helps_5_content": "Skenirajte da biste VIvino izradili popis vinskih podruma, postavili podsjetnike za optimalno razdoblje pijenja i preporučili sparivanje hrane na temelju vrste vina.",
+    "smart_kitchen_helps_6": "6. Shopping List",
+    "smart_kitchen_helps_6_content": "Generirajte popis za kupovinu na temelju recepta, označite artikle koje već posjedujete i nabavili kao referencu za kupovinu.",
+    "smart_support_key": "Pametna podrška",
+    "smart_support_helps": "Smart Support pruža sveobuhvatnu pomoć za vaše uređaje. Možete dobiti savjete za čišćenje i njegu za svakodnevno održavanje, samodijagnostiku jednim klikom za provjeru statusa svih vaših uređaja i pružanje mogućih rješenja za sve nenormalne operacije",
+    "smart_support_helps_1": "1. Savjeti za čišćenje i održavanje",
+    "smart_support_helps_1_content": "Dajte prijedloge za svakodnevno čišćenje i održavanje proizvoda.",
+    "smart_support_helps_2": "2. Samodijagnoza jednim klikom",
+    "smart_support_helps_2_content": "Samoprovjera jednim klikom za uvid u stanje svih kućanskih aparata. Kada se otkrije problem, navedite preporučena rješenja.",
+    "smart_support_helps_3": "Rješavanje problema",
+    "smart_support_helps_3_content": "Kada uređaj ima problema, korisnici si mogu sami pomoći, otkloniti kvar i riješiti problem prema vodiču za greške.",
+    "smart_support_helps_4": "4. Prijavite problem",
+    "smart_support_helps_4_content": "Ako postoje problemi s aplikacijom ili upotrebom proizvoda, korisnici mogu dati povratne informacije na mreži kako bi smanjili vrijeme komunikacije s pozivnim centrom.",
+    "smart_support_helps_5": "5.Kontaktirajte nas",
+    "smart_support_helps_5_content": "Korisnici nas mogu kontaktirati putem telefona, e-pošte i službene web stranice.",
+    "block_key": "Blokirati",
+    "guide_tips_device_1": "Ovo je <b> nova kartica početne stranice. </b>",
+    "guide_tips_device_2": "Možete kliknuti \" : \" za uređivanje redoslijeda, prikaz ili skrivanje.",
+    "guide_tips_device_3": "Možete dugo pritisnuti karticu da biste je izbrisali ili uredili.",
+    "guide_tips_device_4": "Možete doživjeti <b> prilagođene kartice scenarija. </b>",
+    "guide_tips_device_5": "Postavku početne kartice možete pronaći na <b> prilagodite izgled </b> na stranici izbornika",
+    "guide_tips_1": "ConnectLife je lansirao <b> pet scenarija. </b>",
+    "guide_tips_2": "Možete kliknuti \":\" za uređivanje redoslijeda odjeljaka",
+    "guide_tips_3": "Možete povući \"=\" da promijenite redoslijed odjeljaka na početnoj stranici.",
+    "c_your_device": "Povežite\nsvoje uređaje",
+    "a_ex_new_way": "i iskusite novi način pametnog življenja.",
+    "my_place": "Moje mjesto",
+    "home_tab": "Kartica Početna stranica",
+    "home_tab_content": "Prikažite ili sakrijte karticu scenarija na vrhu početne stranice"
 }
