--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4438,5 +4438,86 @@
     "CL_DV_OV_night_mode_setting_desc": "Таңертеңгілік уақыттарда экрандың жарықтығын және/немесе жарықты кеміту.",
     "CL_DV_OV_door_lock_setting_desc": "Есік құлпын қосу пешіңіздің есігін құлыптайды.",
     "CL_CF_FM_one_day_left": "1 күн қалды",
-    "CL_CF_FM_x_item_selected": "*** элемент таңдалды"
+    "CL_CF_FM_x_item_selected": "*** элемент таңдалды",
+    "CL_SL_CM_progam_send_warning": "Кешіріңіз, бағдарлама жіберу мүмкін емес, құрылғыңызды қосып, қашықтан басқару құралын ашып, әрекетті қайталаңыз.",
+    "CL_SL_CM_progam_start_warning": "Кешіріңіз, бағдарламаны іске қосу мүмкін емес, құрылғыңызды қосып, қашықтан басқару құралын ашып, әрекетті қайталаңыз.",
+    "CL_SL_CM_progam_sent_successfully": "Бағдарлама сәтті жіберілді!",
+    "CL_SL_CM_select_device_desc": "Пайдаланылатын құрылғыны таңдаңыз.",
+    "CL_DV_WM_Detergent_In_Use_key": "Қолданылатын жуғыш зат",
+    "CL_DV_RF_cleaning_mode": "Тазалау режимі",
+    "CL_DV_RF_holiday_mode": "Демалыс режимі",
+    "CL_DV_RF_party_mode": "Кеш режимі",
+    "w_i_connect_scenario": "ConnectLife сценарийі дегеніміз не",
+    "w_i_smart_energy": "Smart Energy дегеніміз не",
+    "smart_energy_l_m": "Smart Energy қызметінің негізгі мүмкіндіктері туралы көбірек біліңіз",
+    "w_i_air_care": "Air Care дегеніміз не",
+    "air_care_l_m": "Air Care қызметінің негізгі мүмкіндіктері туралы көбірек біліңіз",
+    "w_i_smart_laundry": "Smart Laundry дегеніміз не",
+    "smart_laundry_l_m": "Ақылды кір жуудың негізгі мүмкіндіктері туралы көбірек біліңіз",
+    "w_i_smart_kitchen": "Smart Kitchen дегеніміз не",
+    "smart_kitchen_l_m": "Smart Kitchen негізгі мүмкіндіктері туралы көбірек біліңіз",
+    "w_i_smart_support": "Smart қолдау дегеніміз не",
+    "smart_support_l_m": "Smart қолдау қызметінің негізгі мүмкіндіктері туралы көбірек біліңіз",
+    "smart_energy_helps": "Smart Energy құрылғыларды бақылауға және энергияны үнемдейтін күйде ұстауға көмектеседі",
+    "smart_energy_helps_1": "1.Бір басу арқылы Эко",
+    "smart_energy_helps_1_content": "Құрылғыларыңыздың белсенді ЭКО режимі. Құрылғының энергия тұтынуын статистикалық талдау. Қуатты үнемдеу деректерін бақылаңыз және қуатты пайдалану мақсатын орнатыңыз.",
+    "smart_energy_helps_2": "2.Энергияны тұтынуды бақылау",
+    "smart_energy_helps_2_content": "Күнделікті, айлық және жылдық негізде бүкіл үй қуаты мен суды тұтынуды есептеңіз. сонымен қатар жеке құрылғылардың тұтыну статистикасын, таңдалған кезеңдегі әрбір құрылғының қуат тұтыну үлесін, жалпы және жеке қуат тұтынуын көруге болады.",
+    "smart_energy_helps_3": "3. Энергетикалық көмекші",
+    "smart_energy_helps_3_content": "Қуатты үнемдеу мақсаттарын қойыңыз және белгіленген мақсатты мәндерге жеткенде пайдаланушыларға хабарландырулар жіберіңіз.",
+    "air_care_helps": "Ауа күтімі бүкіл үйдегі температураны, ылғалдылықты және ауаны интеллектуалды бақылауды шешуге бағытталған",
+    "air_care_helps_1": "1. Ауаны бағалау",
+    "air_care_helps_1_content": "Әр бөлменің температурасы мен ылғалдылығының күйін нақты уақыт режимінде бақылаңыз және ауа жағдайына негізделген жайлылық бағалаулары мен еске салғыштарды беріңіз.",
+    "air_care_helps_2": "2.Бір рет басу арқылы оңтайландыру",
+    "air_care_helps_2_content": "Оңтайландыруды бір рет басу арқылы бастауға болады. Біз бес түрлі оңтайландыру схемасын ұсынамыз. Әрбір оңтайландыру режимі пайдаланушыларға теңшелген оңтайландыру шешімдерімен қамтамасыз ете отырып, пайдаланушы қажеттіліктеріне сәйкес реттелуі мүмкін.",
+    "air_care_helps_3": "3.3D бөлме көрінісі",
+    "air_care_helps_3_content": "Үйіңізді егжей-тегжейлі 3D визуализациясы арқылы бөлмеңіздің күйі мен құрылғыларын қадағалаңыз.",
+    "smart_laundry_key": "Ақылды кір жуу",
+    "smart_laundry_helps": "Smart Laundry кәсіби жуу кеңестерін, интуитивті кір жуу көмекшісін және кір жуудың теңдесі жоқ тәжірибесін қамтамасыз ететін жуғыш затты біркелкі басқаруды ұсынады.",
+    "smart_laundry_helps_1": "1.Теңшелетін кірлер",
+    "smart_laundry_helps_1_content": "Пайдаланушы профильдері мен қалауларына негізделген жекелендірілген циклдар, әртүрлі маусымдарға арналған тегтері, ашық ауадағы іс-шаралар, нәресте күтімі және т.б.",
+    "smart_laundry_helps_2": "2. Жуғыш заттарды басқару",
+    "smart_laundry_helps_2_content": "Smart Home Laundry Assistant көмегімен кір жуу тәртібін оңтайландырыңыз, жуғыш зат брендтерін автоматты түрде танып, кір жуғыш машинаңыздағы мөлшерді басқарыңыз.",
+    "smart_laundry_helps_3": "3.Кірді пайдалану туралы есеп",
+    "smart_laundry_helps_3_content": "Пайдаланушының кір жуу бағдарламасын пайдалануы, сондай-ақ бір айдағы су мен электр қуатын пайдалануы және барабанды тазалау туралы апталық, айлық және жылдық есептерді көрсетеді.",
+    "smart_kitchen_key": "Ақылды ас үй",
+    "smart_kitchen_helps": "Smart Kitchen сізге бұрын-соңды болмаған интеллектуалды пісіру тәжірибесін ұсынады, оның ішінде интеллектуалды рецепттер, шарап жұптары, рецепт көмекшілері және ингредиенттер, шарап және сусындарды басқару.",
+    "smart_kitchen_helps_1": "1.Аспаз рецепті",
+    "smart_kitchen_helps_1_content": "Бір рет басу арқылы рецепт бойынша пісіру нұсқауларын орындайтын әртүрлі пештерде пісірген кезде ерекше дәмге ие шебердің рецепттерін көріңіз.",
+    "smart_kitchen_helps_2": "2.Recipe Assistant",
+    "smart_kitchen_helps_2_content": "Тамақтану, тағамдар, өмір салты және аллергия сияқты жеке қалауларыңызға негізделген рецепттерді теңшеңіз және жасаңыз.",
+    "smart_kitchen_helps_3": "3. Азық-түлікті басқару",
+    "smart_kitchen_helps_3_content": "Жарамдылық мерзімі сияқты жиі қолданылатын ингредиенттер мәліметтерін қосыңыз және қараңыз. Сәйкес тағам рецептерін жылдам сәйкестендіріңіз және жетіспейтін ингредиенттерді сатып алу тізіміне жіберіңіз.",
+    "smart_kitchen_helps_4": "Сусындарды басқару",
+    "smart_kitchen_helps_4_content": "Сусындарды қосыңыз және ішу тізімін жасаңыз, әрбір сақталған ішімдік туралы толық ақпаратты қараңыз.",
+    "smart_kitchen_helps_5": "Шарапты түгендеу",
+    "smart_kitchen_helps_5_content": "VIvino арқылы шарап жертөлелерінің тізімін жасау үшін сканерлеңіз, оңтайлы ішу кезеңі үшін еске салғыштарды орнатыңыз және шарап түріне негізделген тағамды жұптастыруды ұсыныңыз.",
+    "smart_kitchen_helps_6": "6.Сатып алу тізімі",
+    "smart_kitchen_helps_6_content": "Рецепт негізінде сатып алу тізімін жасаңыз, сізге тиесілі және сатып алынған заттарды сатып алу сілтемесі ретінде белгілеңіз.",
+    "smart_support_key": "Ақылды қолдау",
+    "smart_support_helps": "Smart Support құрылғыларыңызға жан-жақты көмек көрсетеді. Күнделікті техникалық қызмет көрсетуге арналған тазалау және күтім бойынша кеңестер алуға болады, бір рет басу арқылы барлық құрылғыларыңыздың күйін тексеруге және кез келген қалыптан тыс әрекеттер үшін ықтимал шешімдерді қамтамасыз етуге арналған өзін-өзі диагностикалауға болады.",
+    "smart_support_helps_1": "1.Тазалау және техникалық қызмет көрсету бойынша кеңестер",
+    "smart_support_helps_1_content": "Өнімді күнделікті тазалау және күту бойынша ұсыныстар беріңіз.",
+    "smart_support_helps_2": "2.Бір рет басу арқылы өзін-өзі диагностикалау",
+    "smart_support_helps_2_content": "Барлық тұрмыстық техниканың күйін түсіну үшін бір рет басу арқылы өзін-өзі тексеру. Ақаулық анықталғанда, ұсынылған шешімдерді көрсетіңіз.",
+    "smart_support_helps_3": "Ақаулық себебін іздеу және түзету",
+    "smart_support_helps_3_content": "Құрылғыда ақаулық пайда болғанда, пайдаланушылар ақаулар жөніндегі нұсқаулыққа сәйкес өздігінен көмектесіп, ақаулықтарды түзете және шеше алады.",
+    "smart_support_helps_4": "4. Мәселе туралы есеп беру",
+    "smart_support_helps_4_content": "APP немесе өнімді пайдалануда проблемалар туындаса, пайдаланушылар байланыс орталығымен байланысу уақытын қысқарту үшін желіде кері байланыс жасай алады.",
+    "smart_support_helps_5": "5. Бізбен байланысыңыз",
+    "smart_support_helps_5_content": "Пайдаланушылар бізбен телефон, электрондық пошта және ресми сайт арқылы байланыса алады.",
+    "block_key": "Блоктау",
+    "guide_tips_device_1": "Бұл <b> жаңа басты бет қойындысы. </b>",
+    "guide_tips_device_2": "Тапсырысты өңдеу, көрсету немесе жасыру үшін \" : \" басуға болады.",
+    "guide_tips_device_3": "Картаны жою немесе өңдеу үшін оны ұзақ басып тұруға болады.",
+    "guide_tips_device_4": "Сіз <b> теңшелген сценарий карталарын пайдалана аласыз. </b>",
+    "guide_tips_device_5": "Басты қойынды параметрін мәзір бетіндегі <b> сыртқы түрін теңшеу </b> бөлімінен таба аласыз",
+    "guide_tips_1": "ConnectLife <b> бес сценарийді іске қосты. </b>",
+    "guide_tips_2": "Бөлімдердің ретін өңдеу үшін «:» түймесін басуға болады",
+    "guide_tips_3": "Негізгі беттегі бөлімдердің ретін өзгерту үшін «=\" пернесін сүйреуге болады.",
+    "c_your_device": "Құрылғыларыңызды\nқосыңыз",
+    "a_ex_new_way": "және ақылды өмірдің жаңа тәсілін сезіну.",
+    "my_place": "Менің орным",
+    "home_tab": "Негізгі бет қойындысы",
+    "home_tab_content": "Негізгі беттің жоғарғы жағындағы сценарийлер қойындысын көрсетіңіз немесе жасырыңыз"
 }
