--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -4438,5 +4438,86 @@
     "CL_DV_OV_night_mode_setting_desc": "Planlanmış gece saatlerinde ekranın parlaklığını ve/veya ışığı azaltın.",
     "CL_DV_OV_door_lock_setting_desc": "Kapı kilidini açtığınızda fırınınızın kapısı kilitlenecektir.",
     "CL_CF_FM_one_day_left": "1 gün kaldı",
-    "CL_CF_FM_x_item_selected": "*** öğe seçildi"
+    "CL_CF_FM_x_item_selected": "*** öğe seçildi",
+    "CL_SL_CM_progam_send_warning": "Üzgünüz, program gönderilemiyor, lütfen cihazınızı açıp uzaktan kumandayı açıp tekrar deneyin.",
+    "CL_SL_CM_progam_start_warning": "Üzgünüz, program başlatılamıyor, lütfen cihazınızı açın ve uzaktan kumandayı açıp tekrar deneyin.",
+    "CL_SL_CM_progam_sent_successfully": "Program başarıyla gönderildi!",
+    "CL_SL_CM_select_device_desc": "Lütfen kullanılacak cihazı seçin.",
+    "CL_DV_WM_Detergent_In_Use_key": "Kullanılan Deterjan",
+    "CL_DV_RF_cleaning_mode": "Temizleme modu",
+    "CL_DV_RF_holiday_mode": "Tatil modu",
+    "CL_DV_RF_party_mode": "Parti modu",
+    "w_i_connect_scenario": "ConnectLife senaryosu nedir?",
+    "w_i_smart_energy": "Akıllı Enerji Nedir?",
+    "smart_energy_l_m": "Akıllı Enerji'nin temel özellikleri hakkında daha fazla bilgi edinin",
+    "w_i_air_care": "Hava Bakımı Nedir?",
+    "air_care_l_m": "Air Care'in temel özellikleri hakkında daha fazla bilgi edinin",
+    "w_i_smart_laundry": "Akıllı Çamaşırhane Nedir?",
+    "smart_laundry_l_m": "Akıllı Çamaşırhanenin temel özellikleri hakkında daha fazla bilgi edinin",
+    "w_i_smart_kitchen": "Akıllı Mutfak Nedir?",
+    "smart_kitchen_l_m": "Akıllı Mutfağın temel özellikleri hakkında daha fazla bilgi edinin",
+    "w_i_smart_support": "Akıllı Destek Nedir?",
+    "smart_support_l_m": "Akıllı Desteğin temel özellikleri hakkında daha fazla bilgi edinin",
+    "smart_energy_helps": "Akıllı Enerji, cihazlarınızı izlemenize ve enerji açısından verimli bir durumda tutmanıza yardımcı olur",
+    "smart_energy_helps_1": "1. Tek Tıkla Eko",
+    "smart_energy_helps_1_content": "Cihazlarınızın aktif ECO modu. Cihaz enerji tüketimini istatistiksel olarak analiz edin. Enerji tasarrufu verilerini izleyin ve Enerji kullanım hedefini ayarlayın.",
+    "smart_energy_helps_2": "2.Enerji Tüketimi İzleme",
+    "smart_energy_helps_2_content": "Günlük, aylık ve yıllık bazda tüm evin elektrik ve su tüketimini hesaplayabilirsiniz. Ayrıca her bir cihazın tüketim istatistiklerini, seçilen dönemde her bir cihazın enerji tüketim oranını, genel ve bireysel enerji tüketimini de görüntüleyebilirsiniz.",
+    "smart_energy_helps_3": "3.Enerji Asistanı",
+    "smart_energy_helps_3_content": "Enerji tasarrufu hedefleri belirleyin ve belirlenen hedef değerlere ulaşıldığında kullanıcılara bildirimler gönderin.",
+    "air_care_helps": "Air Care, tüm evde sıcaklık, nem ve havanın akıllı kontrolünü çözmeyi amaçlamaktadır",
+    "air_care_helps_1": "1.Hava Değerlendirmesi",
+    "air_care_helps_1_content": "Her odanın sıcaklık ve nem durumunu gerçek zamanlı olarak izleyin ve klima durumuna göre konfor değerlendirmeleri ve hatırlatıcılar sağlayın",
+    "air_care_helps_2": "2. Tek Tıkla Optimizasyon",
+    "air_care_helps_2_content": "Optimizasyon tek tıklamayla başlatılabilir. Beş farklı optimizasyon şeması sunuyoruz. Her optimizasyon modu kullanıcı ihtiyaçlarına göre ayarlanabilir ve kullanıcılara özelleştirilmiş optimizasyon çözümleri sunar.",
+    "air_care_helps_3": "3.3D Oda Görünümü",
+    "air_care_helps_3_content": "Evinizin detaylı 3D görselleştirmesi ile odanızın ve cihazlarınızın durumunu takip edin.",
+    "smart_laundry_key": "Akıllı Çamaşırhane",
+    "smart_laundry_helps": "Akıllı Çamaşırhane, uzman yıkama ipuçları, sezgisel bir çamaşır asistanı ve kusursuz deterjan yönetimi sunarak eşsiz bir çamaşır yıkama deneyimi sağlar",
+    "smart_laundry_helps_1": "1. Kişiye Özel Çamaşırhane",
+    "smart_laundry_helps_1_content": "Kullanıcı profillerine ve tercihlerine göre kişiselleştirilmiş döngüler, farklı mevsimler, açık hava aktiviteleri, bebek bakımı ve daha fazlası için etiketler.",
+    "smart_laundry_helps_2": "2.Deterjan Yönetimi",
+    "smart_laundry_helps_2_content": "Akıllı Ev Çamaşır Asistanı ile çamaşır yıkama rutininizi optimize edin, deterjan markalarını otomatik olarak tanıyın ve çamaşır makinenizdeki dozajı yönetin.",
+    "smart_laundry_helps_3": "3.Çamaşır Kullanım Raporu",
+    "smart_laundry_helps_3_content": "Kullanıcının çamaşır yıkama programını kullanımı, aylık su ve elektrik tüketimi ve kazan temizliği ile ilgili haftalık, aylık ve yıllık raporları görüntüler.",
+    "smart_kitchen_key": "Akıllı Mutfak",
+    "smart_kitchen_helps": "Akıllı Mutfak, akıllı tarifler, şarap eşleştirmeleri, tarif yardımcıları ve malzeme, şarap ve içecek yönetimi dahil olmak üzere size benzersiz bir akıllı pişirme deneyimi sunar",
+    "smart_kitchen_helps_1": "1. Şef tarifi",
+    "smart_kitchen_helps_1_content": "Tek tıkla tarifin pişirme talimatlarını takip eden farklı fırınlarda pişirildiğinde eşsiz lezzetlere ulaşan usta tariflerini deneyimleyin.",
+    "smart_kitchen_helps_2": "2.Tarif Yardımcısı",
+    "smart_kitchen_helps_2_content": "Beslenme, mutfak, yaşam tarzı ve alerjiler gibi kişisel tercihlerinize göre tarifleri özelleştirin ve oluşturun.",
+    "smart_kitchen_helps_3": "3.Gıda Yönetimi",
+    "smart_kitchen_helps_3_content": "Son kullanma tarihi gibi sık kullanılan malzeme ayrıntılarını ekleyin ve görüntüleyin. Uygun yemek tariflerini hızla eşleştirin ve eksik malzemeleri alışveriş listesine gönderin.",
+    "smart_kitchen_helps_4": "İçecek Yönetimi",
+    "smart_kitchen_helps_4_content": "İçecekleri ekleyin ve içme listesi oluşturun, depolanan her bir içeceğin detaylı bilgilerini görüntüleyin.",
+    "smart_kitchen_helps_5": "şarap Envanter",
+    "smart_kitchen_helps_5_content": "VIvino ile şarap mahzeni listesi oluşturmak, en uygun içim süresi için hatırlatıcılar ayarlamak ve şarap türüne göre yiyecek eşleştirmeleri önermek için tarayın.",
+    "smart_kitchen_helps_6": "6.Alışveriş Listesi",
+    "smart_kitchen_helps_6_content": "Tarife göre alışveriş listesi oluşturun, halihazırda sahip olduğunuz ve satın aldığınız ürünleri alışveriş referansınız olarak işaretleyin.",
+    "smart_support_key": "Akıllı Destek",
+    "smart_support_helps": "Akıllı Destek cihazlarınız için kapsamlı yardım sağlar. Günlük bakım için temizlik ve bakım ipuçları, tüm cihazlarınızın durumunu kontrol etmek için tek tıklamayla kendi kendine teşhis ve anormal işlemler için olası çözümler alabilirsiniz",
+    "smart_support_helps_1": "1.Temizlik ve Bakım İpuçları",
+    "smart_support_helps_1_content": "Ürünün günlük temizliği ve bakımı için önerilerde bulunun.",
+    "smart_support_helps_2": "2. Tek tıklamayla kendi kendine teşhis",
+    "smart_support_helps_2_content": "Tüm ev aletlerinin durumunu kavramak için tek tıklamayla kendi kendine inceleme. Bir sorun tespit edildiğinde, önerilen çözümler sağlayın.",
+    "smart_support_helps_3": "Sorun giderme",
+    "smart_support_helps_3_content": "Cihazda bir sorun olduğunda kullanıcılar arıza kılavuzuna göre kendi kendilerine yardım edebilir, sorunu giderebilir ve sorunu çözebilirler.",
+    "smart_support_helps_4": "4.Sorun Bildir",
+    "smart_support_helps_4_content": "Uygulamada veya ürün kullanımında sorun yaşanması durumunda kullanıcılar çevrimiçi geri bildirimde bulunarak çağrı merkeziyle iletişim süresini kısaltabilirler.",
+    "smart_support_helps_5": "5.Bizimle İletişime Geçin",
+    "smart_support_helps_5_content": "Kullanıcılar telefon, e-posta ve resmi web sitemiz aracılığıyla bizimle iletişime geçebilirler.",
+    "block_key": "Engellemek",
+    "guide_tips_device_1": "Bu <b> yeni ana sayfa sekmesidir. </b>",
+    "guide_tips_device_2": "Sıralamayı düzenlemek, göstermek veya gizlemek için \" : \" tuşuna tıklayabilirsiniz.",
+    "guide_tips_device_3": "Kartınıza uzun süre basarak onu silebilir veya düzenleyebilirsiniz.",
+    "guide_tips_device_4": "<b> Özelleştirilmiş senaryo kartlarını </b> deneyimleyebilirsiniz.",
+    "guide_tips_device_5": "Ana sekme ayarını menü sayfasındaki <b> görünümü özelleştir </b> kısmında bulabilirsiniz",
+    "guide_tips_1": "ConnectLife <b> beş senaryo </b> başlattı.",
+    "guide_tips_2": "Bölümlerin sırasını düzenlemek için \":\" öğesine tıklayabilirsiniz",
+    "guide_tips_3": "Ana sayfadaki bölümlerin sırasını değiştirmek için \"=\" işaretini sürükleyebilirsiniz.",
+    "c_your_device": "Cihazlarınızı\n bağlayın",
+    "a_ex_new_way": "ve akıllı yaşamanın yeni bir yolunu deneyimleyin.",
+    "my_place": "Benim yerim",
+    "home_tab": "Ana Sayfa Sekmesi",
+    "home_tab_content": "Ana sayfanın üst kısmındaki senaryolar sekmesini göster veya gizle"
 }
