--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -1042,7 +1042,7 @@
     "dry": "烘干",
     "level": "级别",
     "detergent": "洗涤剂",
-    "softener": "柔软 剂",
+    "softener": "柔顺剂",
     "pause": "暂停",
     "shut_down": "关闭",
     "wash_machine_will_be_shut_down": "设备将关机。",
@@ -4438,5 +4438,86 @@
     "CL_DV_OV_night_mode_setting_desc": "可以设置在晚间降低屏幕或灯光的亮度。",
     "CL_DV_OV_door_lock_setting_desc": "打开门锁将会锁住烤箱的门。",
     "CL_CF_FM_one_day_left": "还剩 1 天",
-    "CL_CF_FM_x_item_selected": "*** 已选择商品"
+    "CL_CF_FM_x_item_selected": "*** 已选择商品",
+    "CL_SL_CM_progam_send_warning": "抱歉，程序无法发送，请打开您的设备并打开遥控器后重试。",
+    "CL_SL_CM_progam_start_warning": "抱歉，程序无法启动，请打开您的设备并打开遥控器后重试。",
+    "CL_SL_CM_progam_sent_successfully": "程序发送成功！",
+    "CL_SL_CM_select_device_desc": "请选择要使用的设备。",
+    "CL_DV_WM_Detergent_In_Use_key": "使用中的洗涤剂",
+    "CL_DV_RF_cleaning_mode": "清洁模式",
+    "CL_DV_RF_holiday_mode": "假日模式",
+    "CL_DV_RF_party_mode": "派对模式",
+    "w_i_connect_scenario": "ConnectLife 场景是什么",
+    "w_i_smart_energy": "什么是智能能源",
+    "smart_energy_l_m": "详细了解智能能源的主要功能",
+    "w_i_air_care": "什么是空气护理",
+    "air_care_l_m": "详细了解 Air Care 的主要功能",
+    "w_i_smart_laundry": "什么是智能洗衣",
+    "smart_laundry_l_m": "详细了解智能洗衣的主要功能",
+    "w_i_smart_kitchen": "什么是智能厨房",
+    "smart_kitchen_l_m": "了解智能厨房的主要功能",
+    "w_i_smart_support": "什么是智能支持",
+    "smart_support_l_m": "详细了解智能支持的主要功能",
+    "smart_energy_helps": "智能能源帮助您监控设备并使其保持节能状态",
+    "smart_energy_helps_1": "1.一键环保",
+    "smart_energy_helps_1_content": "激活电器的 ECO 模式。统计分析设备能耗。监控节能数据并设定能源使用目标。",
+    "smart_energy_helps_2": "2.能耗监测",
+    "smart_energy_helps_2_content": "计算全屋日、月、年的用电量和用水量，还可以查看单个设备的消耗统计信息、选定时间段内各设备的能耗占比、整体和单个设备的能耗。",
+    "smart_energy_helps_3": "3.能量助手",
+    "smart_energy_helps_3_content": "设定节能目标，当达到设定的目标值时向用户发送通知。",
+    "air_care_helps": "Air Care旨在解决全屋温度、湿度、空气的智能控制",
+    "air_care_helps_1": "1.空气评估",
+    "air_care_helps_1_content": "实时监测各房间温湿度状态，并根据空气状况提供舒适度评估及提醒",
+    "air_care_helps_2": "2.一键优化",
+    "air_care_helps_2_content": "一键启动优化，提供五种不同的优化方案，每种优化模式都可以根据用户需求进行调整，为用户提供定制化的优化方案。",
+    "air_care_helps_3": "3.3D房间视图",
+    "air_care_helps_3_content": "通过您家里的详细 3D 可视化来关注您房间的状况和设备。",
+    "smart_laundry_key": "智能洗衣",
+    "smart_laundry_helps": "智能洗衣提供专业的洗衣技巧、直观的洗衣助手和无缝的洗涤剂管理，确保无与伦比的洗衣体验",
+    "smart_laundry_helps_1": "1.定制洗衣",
+    "smart_laundry_helps_1_content": "根据用户个人资料和偏好进行个性化周期，并带有不同季节、户外活动、婴儿护理等的标签。",
+    "smart_laundry_helps_2": "2.洗涤剂管理",
+    "smart_laundry_helps_2_content": "使用智能家居洗衣助手优化您的洗衣程序，自动识别洗涤剂品牌并管理洗衣机中的剂量。",
+    "smart_laundry_helps_3": "3.洗衣使用报告",
+    "smart_laundry_helps_3_content": "显示用户使用洗衣程序的每周、每月和每年的报告，以及当月的水电使用情况和滚筒清洁情况。",
+    "smart_kitchen_key": "智能厨房",
+    "smart_kitchen_helps": "智能厨房为您提供前所未有的智能烹饪体验，包括智能菜谱、葡萄酒搭配、菜谱助手以及食材、葡萄酒和饮料管理",
+    "smart_kitchen_helps_1": "1.厨师菜谱",
+    "smart_kitchen_helps_1_content": "体验大师菜谱在不同的烤箱中烹饪时的独特风味，只需单击一下即可按照菜谱的烹饪说明进行烹饪。",
+    "smart_kitchen_helps_2": "2.菜谱助手",
+    "smart_kitchen_helps_2_content": "根据您的个人喜好（包括营养、菜系、生活方式和过敏）定制并生成食谱。",
+    "smart_kitchen_helps_3": "3.食品管理",
+    "smart_kitchen_helps_3_content": "添加并查看常用食材的详细信息，如保质期。快速匹配合适的食物食谱，并将缺少的食材发送到购物清单。",
+    "smart_kitchen_helps_4": "饮料管理",
+    "smart_kitchen_helps_4_content": "添加饮品并创建饮品清单，查看每杯存储饮品的详细信息。",
+    "smart_kitchen_helps_5": "酒品库存",
+    "smart_kitchen_helps_5_content": "扫描后即可通过VIvino创建酒窖列表，设置最佳饮用期提醒，并根据葡萄酒类型推荐食物搭配。",
+    "smart_kitchen_helps_6": "6.购物清单",
+    "smart_kitchen_helps_6_content": "根据菜谱生成购物清单，标记您已拥有和获取的物品作为购物参考。",
+    "smart_support_key": "智能支持",
+    "smart_support_helps": "智能支持为您的设备提供全面帮助。您可以获得日常维护的清洁和保养提示，一键自我诊断以检查所有设备的状态，并为任何异常操作提供可能的解决方案",
+    "smart_support_helps_1": "1.清洁和保养技巧",
+    "smart_support_helps_1_content": "给出产品日常清洁和保养的建议。",
+    "smart_support_helps_2": "2.一键自我诊断",
+    "smart_support_helps_2_content": "一键自检，掌握家电状态，发现问题，提供解决方案建议。",
+    "smart_support_helps_3": "疑难解答",
+    "smart_support_helps_3_content": "当设备出现问题时，用户可以根据故障指南进行自助、排查和解决问题。",
+    "smart_support_helps_4": "4.报告问题",
+    "smart_support_helps_4_content": "如果APP或产品使用中遇到问题，用户可以在线反馈，减少与呼叫中心的沟通时间。",
+    "smart_support_helps_5": "5.联系我们",
+    "smart_support_helps_5_content": "用户可以通过电话、电子邮件、官方网站联系我们。",
+    "block_key": "堵塞",
+    "guide_tips_device_1": "这是<b>新的主页标签。 </b>",
+    "guide_tips_device_2": "您可以点击“：”来编辑顺序、显示或隐藏。",
+    "guide_tips_device_3": "您可以长按卡片进行删除或编辑。",
+    "guide_tips_device_4": "您可以体验<b>定制场景卡。 </b>",
+    "guide_tips_device_5": "您可以在菜单页面的<b>自定义外观</b>中找到主页选项卡设置",
+    "guide_tips_1": "ConnectLife 已推出<b>五种场景。 </b>",
+    "guide_tips_2": "您可以点击“：”来编辑章节顺序",
+    "guide_tips_3": "您可以拖动“=”来更改主页上各部分的顺序。",
+    "c_your_device": "连接\n你的设备",
+    "a_ex_new_way": "体验全新的智慧生活",
+    "my_place": "我的地盘",
+    "home_tab": "主页标签",
+    "home_tab_content": "显示或隐藏主页顶部的场景选项卡"
 }
