--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -4438,5 +4438,86 @@
     "CL_DV_OV_night_mode_setting_desc": "Reducer skærmens lysstyrke og/eller lyset i planlagte natte timer.",
     "CL_DV_OV_door_lock_setting_desc": "Hvis du tænder dørlåsen, låses døren til din ovn.",
     "CL_CF_FM_one_day_left": "1 dag tilbage",
-    "CL_CF_FM_x_item_selected": "*** element valgt"
+    "CL_CF_FM_x_item_selected": "*** element valgt",
+    "CL_SL_CM_progam_send_warning": "Beklager, programmet kan ikke sende. Tænd venligst din enhed og åbn fjernbetjeningen og prøv igen.",
+    "CL_SL_CM_progam_start_warning": "Beklager, programmet kan ikke starte. Tænd venligst din enhed og åbn fjernbetjeningen og prøv igen.",
+    "CL_SL_CM_progam_sent_successfully": "Program sendt med succes!",
+    "CL_SL_CM_select_device_desc": "Vælg venligst den enhed, der skal bruges.",
+    "CL_DV_WM_Detergent_In_Use_key": "Vaskemiddel i brug",
+    "CL_DV_RF_cleaning_mode": "Rengøringstilstand",
+    "CL_DV_RF_holiday_mode": "Ferietilstand",
+    "CL_DV_RF_party_mode": "Festtilstand",
+    "w_i_connect_scenario": "Hvad er ConnectLife-scenarie",
+    "w_i_smart_energy": "Hvad er smart energi",
+    "smart_energy_l_m": "Lær mere om de vigtigste funktioner i Smart Energy",
+    "w_i_air_care": "Hvad er Air Care",
+    "air_care_l_m": "Lær mere om de vigtigste funktioner i Air Care",
+    "w_i_smart_laundry": "Hvad er Smart Laundry",
+    "smart_laundry_l_m": "Lær mere om nøglefunktionerne i Smart Laundry",
+    "w_i_smart_kitchen": "Hvad er smart køkken",
+    "smart_kitchen_l_m": "Lær mere om de vigtigste funktioner i Smart Kitchen",
+    "w_i_smart_support": "Hvad er Smart Support",
+    "smart_support_l_m": "Lær mere om de vigtigste funktioner i Smart Support",
+    "smart_energy_helps": "Smart Energy hjælper dig med at overvåge og holde enheder i energieffektiv tilstand",
+    "smart_energy_helps_1": "1.Et-klik Eco",
+    "smart_energy_helps_1_content": "Aktiv ECO-tilstand for dine apparater. Analyser enhedens energiforbrug statistisk. Overvåg energibesparelsesdata og sæt energiforbrugsmål.",
+    "smart_energy_helps_2": "2.Overvågning af energiforbrug",
+    "smart_energy_helps_2_content": "Beregn hele husets strøm- og vandforbrug på daglig, månedlig og årlig basis. du kan også se forbrugsstatistikken for de enkelte enheder, andelen af ​​energiforbruget for hver enhed inden for den valgte periode, det samlede og individuelle energiforbrug.",
+    "smart_energy_helps_3": "3.Energiassistent",
+    "smart_energy_helps_3_content": "Sæt energibesparende mål, og send meddelelser til brugerne, når de fastsatte målværdier er nået.",
+    "air_care_helps": "Air care har til formål at løse den intelligente styring af temperatur, luftfugtighed og luft i hele huset",
+    "air_care_helps_1": "1. Luftevaluering",
+    "air_care_helps_1_content": "Overvåg temperatur- og fugtighedsstatus for hvert rum i realtid, og giv komfortevalueringer og påmindelser baseret på aircondition",
+    "air_care_helps_2": "2. Optimering med et enkelt klik",
+    "air_care_helps_2_content": "Optimering kan startes med et enkelt klik. Vi tilbyder fem forskellige optimeringsordninger. Hver optimeringstilstand kan justeres efter brugernes behov, hvilket giver brugerne skræddersyede optimeringsløsninger.",
+    "air_care_helps_3": "3.3D værelsesudsigt",
+    "air_care_helps_3_content": "Hold øje med dit værelses status og apparater gennem en detaljeret 3D-visualisering af dit hjem.",
+    "smart_laundry_key": "Smart vasketøj",
+    "smart_laundry_helps": "Smart Laundry tilbyder ekspert vasketips, en intuitiv vaskeassistent og problemfri vaskemiddelhåndtering, hvilket sikrer en uovertruffen vaskeoplevelse",
+    "smart_laundry_helps_1": "1.Tilpasset vaskeri",
+    "smart_laundry_helps_1_content": "Personlige cyklusser baseret på brugerprofiler og præferencer med tags til forskellige årstider, udendørs aktiviteter, babypleje og meget mere.",
+    "smart_laundry_helps_2": "2.Vaskemiddelhåndtering",
+    "smart_laundry_helps_2_content": "Optimer din vaskerutine med Smart Home Laundry Assistant, genkend automatisk vaskemiddelmærker og administrer doseringen i din vaskemaskine.",
+    "smart_laundry_helps_3": "3. Rapport om brug af vasketøj",
+    "smart_laundry_helps_3_content": "Viser ugentlige, månedlige og årlige rapporter om brugerens brug af vaskeprogrammet, samt månedens vand- og elforbrug og tromlengøring.",
+    "smart_kitchen_key": "Smart køkken",
+    "smart_kitchen_helps": "Smart Kitchen giver dig en hidtil uset intelligent madlavningsoplevelse, herunder intelligente opskrifter, vinparringer, opskriftsassistenter og håndtering af ingredienser, vin og drikkevarer",
+    "smart_kitchen_helps_1": "1.Kokken opskrift",
+    "smart_kitchen_helps_1_content": "Oplev mesteropskrifter i unikke smagsvarianter, når de tilberedes i forskellige ovne, som følger opskriftens tilberedningsvejledning med blot et enkelt klik.",
+    "smart_kitchen_helps_2": "2.Opskriftsassistent",
+    "smart_kitchen_helps_2_content": "Tilpas og generer opskrifter baseret på dine personlige præferencer, herunder ernæring, køkkener, livsstil og allergier.",
+    "smart_kitchen_helps_3": "3.Fødevarehåndtering",
+    "smart_kitchen_helps_3_content": "Tilføj og se detaljer om ofte brugte ingredienser såsom udløbsdato. Match hurtigt passende madopskrifter og sendte manglende ingredienser til indkøbslisten.",
+    "smart_kitchen_helps_4": "Drikkevarehåndtering",
+    "smart_kitchen_helps_4_content": "Tilføj drikkevarer og opret en drikkeliste, se detaljerede oplysninger om hver enkelt opbevaret drikkevare.",
+    "smart_kitchen_helps_5": "Vin Beholdning",
+    "smart_kitchen_helps_5_content": "Scan for at oprette vinkælderliste fra VIvino, indstil påmindelser for optimal drikkeperiode og anbefal madparring baseret på vintype.",
+    "smart_kitchen_helps_6": "6. Indkøbsliste",
+    "smart_kitchen_helps_6_content": "Generer indkøbslisten ud fra opskriften, marker de varer, du allerede ejer og har erhvervet, som din indkøbsreference.",
+    "smart_support_key": "Smart support",
+    "smart_support_helps": "Smart Support giver omfattende assistance til dine enheder. Du kan få rengørings- og plejetips til daglig vedligeholdelse, selvdiagnosticering med et enkelt klik for at kontrollere status for alle dine enheder og give mulige løsninger til unormale operationer",
+    "smart_support_helps_1": "1.Rengørings- og vedligeholdelsestips",
+    "smart_support_helps_1_content": "Giv forslag til daglig rengøring og vedligeholdelse af produktet.",
+    "smart_support_helps_2": "2.Et-klik selv Dignosis",
+    "smart_support_helps_2_content": "Et-klik selvinspektion for at forstå status for alle husholdningsapparater. Når et problem opdages, skal du give anbefalede løsninger.",
+    "smart_support_helps_3": "Fejlfinding",
+    "smart_support_helps_3_content": "Når enheden har et problem, kan brugere selvhjælpe, fejlfinde og løse problemet i henhold til fejlvejledningen.",
+    "smart_support_helps_4": "4.Rapportér problem",
+    "smart_support_helps_4_content": "Hvis der er problemer med APP'en eller produktbrugen, kan brugerne give feedback online for at reducere kommunikationstiden med callcenteret.",
+    "smart_support_helps_5": "5.Kontakt os",
+    "smart_support_helps_5_content": "Brugere kan kontakte os via telefon, e-mail og officielle hjemmeside.",
+    "block_key": "Blok",
+    "guide_tips_device_1": "Dette er fanen <b> ny startside. </b>",
+    "guide_tips_device_2": "Du kan klikke på \" : \" for at redigere ordren, vise eller skjule.",
+    "guide_tips_device_3": "Du kan trykke længe på kortet for at slette eller redigere det.",
+    "guide_tips_device_4": "Du kan opleve <b> tilpassede scenariekort. </b>",
+    "guide_tips_device_5": "Du kan finde indstillingen for fanen Hjem under <b> tilpas udseende </b> på menusiden",
+    "guide_tips_1": "ConnectLife har lanceret <b> fem scenarier. </b>",
+    "guide_tips_2": "Du kan klikke på \":\" for at redigere rækkefølgen af ​​sektioner",
+    "guide_tips_3": "Du kan trække \"=\" for at ændre rækkefølgen af ​​sektionerne på hjemmesiden.",
+    "c_your_device": "Tilslut\ndine enheder",
+    "a_ex_new_way": "og oplev en ny måde at leve på.",
+    "my_place": "Mit sted",
+    "home_tab": "Fanen Hjemmeside",
+    "home_tab_content": "Vis eller skjul fanen scenarier øverst på startsiden"
 }
